north fresno project

--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="first-page">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>North Fresno Assembly of God</title>
+  <link rel="stylesheet" href="css.style/style.css">
 </head>
+
 <body>
-  <p>
-    Hey
-  </p>
-  <h1>July 6 2017</h1>
+  <h1 class="first-h1">North Fresno Assembly of God</h1>
+  <!-- Start Nav Bar -->
+  <nav class="main-nav">
+    <ul class="nav-list">
+      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="event.html">Events</a></li>
+      <li class="nav-item"><a class="nav-link" href="photo.html">Photo</a></li>
+      <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <!-- End Nav Bar -->
+  <!-- Start of the INFO bar -->
+  <div class="info-div">
+    <h2 class="info-h2">Basic Info</h2>
+    <p class="info-p"><strong>Address</strong>: 2407 N Dakota</p>
+    <p class="info-p"><strong>Services</strong>: Every Sundays 11 A.M - 1 P.M & Every Wednesdays 7 P.M - 8:30 P.M</p>
+  </div>
+  <!--  End of the INFO bar-->
+
+  <!-- Start of the EVENT bar  -->
+  <div class="event-div">
+    <h2 class="event-h2">Monthly Events</h6>
+        <p class="event-p"><strong> July 5 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
+        <p class="event-p"><strong> July 7 :</strong> PowerKidz Summer Outreach</p>
+        <p class="event-p"><strong> July 9 :</strong> Burrito Sale ($3.00/burrito) after church</p>
+        <p class="event-p"><strong> July 11 :</strong> Food Distribution (7 A.M FOR VOLUTEERS) 9 A.M - 12 P.M</p>
+        <p class="event-p"><strong> July 12 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
+        <p class="event-p"><strong> July 14 :</strong> PowerKidz Summer Outreach</p>
+        <p class="event-p"><strong> July 19 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
+        <p class="event-p"><strong> July 21 :</strong> PowerKidz Summer Outreach</p>
+        <p class="event-p"><strong> July 23 :</strong> Enchilada Plate Sale ($5.00/plate) after church</p>
+        <p class="event-p"><strong> July 26 :</strong> Wednesday Bible Studies & Potfaith 7 P.M - 8:30 P.M</p>
+        <p class="event-p"><strong> July 28 :</strong> PowerKidz Summer Outreach</p>
+  </div>
 </body>
 </html>
