made css files and html files easier to target

--- a/html.files/home.html
+++ b/html.files/home.html
@@ -24,7 +24,7 @@
   <!-- Start of the INFO bar -->
   <div class="info-div">
     <h2 class="info-h2">Basic Info</h2>
-    <p class="info-p"><strong>Address</strong>: 2407 N Dakota</p>
+    <p class="info-p"><strong>Address</strong>: 2707 W Dakota Ave. Fresno, Ca. 93705</p>
     <p class="info-p"><strong>Services</strong>: Every Sundays 11 A.M - 1 P.M & Every Wednesdays 7 P.M - 8:30 P.M</p>
   </div>
   <!--  End of the INFO bar-->
