--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>North Fresno Assembly of God</title>
     <link rel="stylesheet" href="css.style/style.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
   </head>
 
   <body>
     <h1 class="first-h1">North Fresno Assembly of God</h1>
+
     <!-- Start Nav Bar -->
     <nav class="main-nav">
       <ul class="nav-list">
@@ -21,29 +23,63 @@
       </ul>
     </nav>
     <!-- End Nav Bar -->
-    <!-- Start of the INFO bar -->
-    <div class="info-div">
-      <h2 class="info-h2">Basic Info</h2>
-      <p class="info-p"><strong>Address</strong>: 2707 W Dakota Ave. Fresno, Ca. 93705</p>
-      <p class="info-p"><strong>Services</strong>: Every Sundays 11 A.M - 1 P.M & Every Wednesdays 7 P.M - 8:30 P.M</p>
-    </div>
-    <!--  End of the INFO bar-->
 
-    <!-- Start of the EVENT bar  -->
-    <div class="event-div">
-      <h2 class="event-h2">Monthly Events</h6>
-        <p class="event-p"><strong> July 5 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
-        <p class="event-p"><strong> July 7 :</strong> PowerKidz Summer Outreach</p>
-        <p class="event-p"><strong> July 9 :</strong> Burrito Sale ($3.00/burrito) after church</p>
-        <p class="event-p"><strong> July 11 :</strong> Food Distribution (7 A.M FOR VOLUTEERS) 9 A.M - 12 P.M</p>
-        <p class="event-p"><strong> July 12 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
-        <p class="event-p"><strong> July 14 :</strong> PowerKidz Summer Outreach</p>
-        <p class="event-p"><strong> July 19 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
-        <p class="event-p"><strong> July 21 :</strong> PowerKidz Summer Outreach</p>
-        <p class="event-p"><strong> July 23 :</strong> Enchilada Plate Sale ($5.00/plate) after church</p>
-        <p class="event-p"><strong> July 26 :</strong> Wednesday Bible Studies & Potfaith 7 P.M - 8:30 P.M</p>
-        <p class="event-p"><strong> July 28 :</strong> PowerKidz Summer Outreach</p>
+    <!-- Start of the INFO bar -->
+    <section class="eventandinfo-container">
+      <div class="info-div">
+        <h2 class="info-h2">Basic Info</h2>
+        <p class="info-p"><strong>Address</strong>: 2707 W Dakota Ave. Fresno, Ca. 93705</p>
+        <p class="info-p"><strong>Services</strong>: Every Sundays 11 A.M - 1 P.M & Every Wednesdays 7 P.M - 8:30 P.M</p>
+      </div>
+      <!--  End of the INFO bar-->
+
+      <!-- Start of the EVENT bar  -->
+      <div class="event-div">
+        <h2 class="event-h2">Monthly Events</h6>
+          <p class="event-p"><strong> July 5 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
+          <p class="event-p"><strong> July 7 :</strong> PowerKidz Summer Outreach</p>
+          <p class="event-p"><strong> July 9 :</strong> Burrito Sale ($3.00/burrito) after church</p>
+          <p class="event-p"><strong> July 11 :</strong> Food Distribution (7 A.M FOR VOLUTEERS) 9 A.M - 12 P.M</p>
+          <p class="event-p"><strong> July 12 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
+          <p class="event-p"><strong> July 14 :</strong> PowerKidz Summer Outreach</p>
+          <p class="event-p"><strong> July 19 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
+          <p class="event-p"><strong> July 21 :</strong> PowerKidz Summer Outreach</p>
+          <p class="event-p"><strong> July 23 :</strong> Enchilada Plate Sale ($5.00/plate) after church</p>
+          <p class="event-p"><strong> July 26 :</strong> Wednesday Bible Studies & Potfaith 7 P.M - 8:30 P.M</p>
+          <p class="event-p"><strong> July 28 :</strong> PowerKidz Summer Outreach</p>
+    </div>
+    </section>
+
+    <!-- Start of Footer -->
+      <section class="footer-container">
+     <div class="footer-right">
+    <span class="church-contact">
+      <!--PUT IN ICONS-->
+      <!-- <a href="footer-icons"><i class="fa fa-facebook"></i></a>
+      <a href="footer-icons"><i class="fa fa-instagram"></i></a>
+      <a href="footer-icons"><i class="fa fa-yelp"></i></a> -->
+    </span>
   </div>
+
+  <div class="footer-contact">
+    <span class="copyright">
+  &copy; 2017 All rights reserved<br>
+  Website by: Marisol Odallys Garcia
+</span>
+  </div>
+
+  <div class="footer-left">
+<span class="personal-contact">
+  <!--PUT IN ICONS-->
+  <!-- <a href="footer-icons"><i class="fa fa-github"></i></a>
+  <a href="footer-icons"><i class="fa fa-linkedin"></i></a>
+  <a href="footer-icons"><i class="fa fa-slack"></i></a> -->
+
+</span>
+  </div>
+
+</section>
+    <!-- End of Footer -->
 
   <!-- Start of img div -->
 
