change my opnion on website

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>North Fresno Assembly of God</title>
-    <link rel="stylesheet" href="css.style/style.css">
+    <link rel="stylesheet" href="css.style/style.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -35,62 +36,45 @@
 
       <!-- Start of the EVENT bar  -->
       <div class="event-div">
-        <h2 class="event-h2">Monthly Events</h6>
-          <p class="event-p"><strong> July 5 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
-          <p class="event-p"><strong> July 7 :</strong> PowerKidz Summer Outreach</p>
-          <p class="event-p"><strong> July 9 :</strong> Burrito Sale ($3.00/burrito) after church</p>
-          <p class="event-p"><strong> July 11 :</strong> Food Distribution (7 A.M FOR VOLUTEERS) 9 A.M - 12 P.M</p>
-          <p class="event-p"><strong> July 12 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
-          <p class="event-p"><strong> July 14 :</strong> PowerKidz Summer Outreach</p>
-          <p class="event-p"><strong> July 19 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
-          <p class="event-p"><strong> July 21 :</strong> PowerKidz Summer Outreach</p>
-          <p class="event-p"><strong> July 23 :</strong> Enchilada Plate Sale ($5.00/plate) after church</p>
-          <p class="event-p"><strong> July 26 :</strong> Wednesday Bible Studies & Potfaith 7 P.M - 8:30 P.M</p>
-          <p class="event-p"><strong> July 28 :</strong> PowerKidz Summer Outreach</p>
-    </div>
-    </section>
+        <h2 class="event-h2">Monthly Events</h2>
+        <p class="event-p"><strong> July 5 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
+        <p class="event-p"><strong> July 7 :</strong> PowerKidz Summer Outreach</p>
+        <p class="event-p"><strong> July 9 :</strong> Burrito Sale ($3.00/burrito) after church</p>
+        <p class="event-p"><strong> July 11 :</strong> Food Distribution (7 A.M FOR VOLUTEERS) 9 A.M - 12 P.M</p>
+        <p class="event-p"><strong> July 12 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
+        <p class="event-p"><strong> July 14 :</strong> PowerKidz Summer Outreach</p>
+        <p class="event-p"><strong> July 19 :</strong> Wednesday Bible Studies 7 P.M - 8:30 P.M</p>
+        <p class="event-p"><strong> July 21 :</strong> PowerKidz Summer Outreach</p>
+        <p class="event-p"><strong> July 23 :</strong> Enchilada Plate Sale ($5.00/plate) after church</p>
+        <p class="event-p"><strong> July 26 :</strong> Wednesday Bible Studies & Potfaith 7 P.M - 8:30 P.M</p>
+        <p class="event-p"><strong> July 28 :</strong> PowerKidz Summer Outreach</p>
+      </div>
+      <a href="event.html">
+        <button class="home-event-button">Event Page</button>
 
-    <!-- Start of Footer -->
-      <section class="footer-container">
-     <div class="footer-right">
-    <span class="church-contact">
-      <!--PUT IN ICONS-->
-      <!-- <a href="footer-icons"><i class="fa fa-facebook"></i></a>
-      <a href="footer-icons"><i class="fa fa-instagram"></i></a>
-      <a href="footer-icons"><i class="fa fa-yelp"></i></a> -->
-    </span>
-  </div>
+      </section>
 
-  <div class="footer-contact">
-    <span class="copyright">
-  &copy; 2017 All rights reserved<br>
-  Website by: Marisol Odallys Garcia
-</span>
-  </div>
+<!-- Start of footer -->
+      <footer class="footer-container">
+        <div class="social-media-container left ">
+          <a href="https://www.facebook.com/northfresnoassemblyofgod"><span class="fa fa-facebook-square"></span></a>
+      <a href="https://www.google.com/search?q=2707+W+Dakota&ie=utf-8&oe=utf-8"><span class="fa fa-map-marker"></span></a>
 
-  <div class="footer-left">
-<span class="personal-contact">
-  <!--PUT IN ICONS-->
-  <!-- <a href="footer-icons"><i class="fa fa-github"></i></a>
-  <a href="footer-icons"><i class="fa fa-linkedin"></i></a>
-  <a href="footer-icons"><i class="fa fa-slack"></i></a> -->
-
-</span>
-  </div>
-
-</section>
-    <!-- End of Footer -->
-
-  <!-- Start of img div -->
+      </div>
+      </span>
+      <span class="copyright">
+                     &copy; 2017 All Rights Reserved<br>
+                     Website by: Marisol Odallys Garcia
+                 </span>
+      <div class="social-media-container right">
+        <a href="https://www.instagram.com/iam_marixo/?hl=en"><span class="fa fa-instagram"></span></a>
+        <a href="https://c9.io/marisolgarcia10"><span class="fa fa-cloud"></span></a>
 
 
-  <!-- <div class="home-images">
-    <img src="../image/2016powerkidz.jpg">
-    <img src="../image/fooddrive.jpg">
-    <img src="../image/2016valentine.jpg">
-    <img src="../image/northfresno3.jpg">
-    <img src="../image/northfresno5.jpg">
-  </div> -->
-  <!-- End of img div -->
-</body>
+      </div>
+
+      </footer>
+      <!-- End of Footer -->
+  </body>
+
 </html>
