--- a/photo.html
+++ b/photo.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>North Fresno Assembly of God</title>
-    <link rel="stylesheet" href="css.style/style.css">
+    <link rel="stylesheet" href="css.style/style.css" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -21,3 +23,25 @@
       </ul>
     </nav>
     <!-- End Nav Bar -->
+    <!-- Start of Footer -->
+    <footer class="footer-container">
+      <div class="social-media-container left ">
+        <a href="https://www.facebook.com/northfresnoassemblyofgod/"><span class="fa fa-facebook-square"></span></a>
+        <a href="https://www.google.com/search?q=2707+W+Dakota&ie=utf-8&oe=utf-8"><span class="fa fa-map-marker"></span></a>
+
+      </div>
+      </span>
+      <span class="copyright">
+                   &copy; 2017 All Rights Reserved<br>
+                   Website by: Marisol Odallys Garcia
+               </span>
+      <div class="social-media-container right">
+        <a href="https://www.instagram.com/iam_marixo/?hl=en"><span class="fa fa-instagram"></span></a>
+        <a href="https://c9.io/marisolgarcia10"><span class="fa fa-cloud"></span></a>
+
+
+      </div>
+
+    </footer>
+    <!-- End of Footer -->
+  </body>
