--- a/event.html
+++ b/event.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>North Fresno Assembly of God</title>
-    <link rel="stylesheet" href="css.style/style.css">
+    <link rel="stylesheet" href="css.style/style.css" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -21,3 +23,78 @@
       </ul>
     </nav>
     <!-- End Nav Bar -->
+
+    <div class="month">
+      <ul>
+        <li class="prev">&#10094;</li>
+        <li class="next">&#10095;</li>
+        <li>
+          July<br>
+          <span style="font-size:18px">2017</span>
+        </li>
+      </ul>
+    </div>
+
+    <ul class="weekdays">
+      <li>Su</li>
+      <li>Mo</li>
+      <li>Tu</li>
+      <li>We</li>
+      <li>Th</li>
+      <li>Fr</li>
+      <li>Sa</li>
+    </ul>
+
+    <ul class="days">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+      <li>13</li>
+      <li>14</li>
+      <li>15</li>
+      <li>16</li>
+      <li>17</li>
+      <li>18</li>
+      <li>19</li>
+      <li>20</li>
+      <li>21</li>
+      <li>25</li>
+      <li>26</li>
+      <li>27</li>
+      <li>28</li>
+      <li>29</li>
+      <li>30</li>
+      <li>31</li>
+    </ul>
+
+    <!-- Start of Footer -->
+    <footer class="footer-container">
+      <div class="social-media-container left ">
+        <a href="https://www.facebook.com/northfresnoassemblyofgod/"><span class="fa fa-facebook-square"></span></a>
+        <a href="https://www.google.com/search?q=2707+W+Dakota&ie=utf-8&oe=utf-8"><span class="fa fa-map-marker"></span></a>
+
+      </div>
+      </span>
+      <span class="copyright">
+                   &copy; 2017 All Rights Reserved<br>
+                   Website by: Marisol Odallys Garcia
+               </span>
+      <div class="social-media-container right">
+        <a href="https://www.instagram.com/iam_marixo/?hl=en"><span class="fa fa-instagram"></span></a>
+        <a href="https://c9.io/marisolgarcia10"><span class="fa fa-cloud"></span></a>
+
+
+      </div>
+
+    </footer>
+    <!-- End of Footer -->
+  </body>
